--- a/src/assets/sass/components/header/header.scss
+++ b/src/assets/sass/components/header/header.scss
@@ -7,7 +7,7 @@
     width: 100%;
     height: 70px;
     border-bottom: solid 1.5px #f1f1f1;
-    
+    background-color: #ffffff;
     .logo {
         left: 50px;
         display: flex;
