--- a/src/assets/sass/components/index.scss
+++ b/src/assets/sass/components/index.scss
@@ -1,2 +1,3 @@
-@import './general.scss';
-@import 'header/header.scss';
+@import "./general.scss";
+@import "header/header.scss";
+@import "home/home.scss";
