--- a/src/components/Status/style/CreatePostModal.scss
+++ b/src/components/Status/style/CreatePostModal.scss
@@ -256,3 +256,10 @@
     }
   }
 }
+#tooltip-emoji {
+  .tooltip-inner {
+    max-width: fit-content;
+    padding: 0;
+    border-radius: 10px;
+  }
+}
