--- a/src/components/Status/style/Status.scss
+++ b/src/components/Status/style/Status.scss
@@ -1,5 +1,5 @@
 .status_modal {
-  width: 40vw;
+  width: 80%;
   background-color: #fff;
   border-radius: max(0px, min(8px, ((100vw - 4px) - 100%) * 9999)) / 8px;
   padding: 12px 16px 10px;
