feat: ui comment

--- a/src/components/PostCard/Style/PostHeader.scss
+++ b/src/components/PostCard/Style/PostHeader.scss
@@ -9,6 +9,9 @@
         border-radius: 50%;
       }
     }
+    .avatar-container:hover {
+      cursor: pointer;
+    }
     .content.flex-grow-1 {
       display: flex;
       flex-direction: column;
