--- a/src/assets/sass/components/header/header.scss
+++ b/src/assets/sass/components/header/header.scss
@@ -6,7 +6,7 @@
   top: 0;
   width: 100%;
   height: 70px;
-  border-bottom: solid 1.5px #f1f1f1;
+  border-bottom: solid 1.5px rgb(219, 219, 219);
   background: #ffffff;
 
   .logo {
@@ -25,7 +25,7 @@
       margin: auto;
       width: 60%;
     }
-    .users{
+    .users {
       position: absolute;
       width: 50%;
       min-width: 250px;
@@ -158,4 +158,3 @@
     }
   }
 }
-
