--- a/src/components/Comment/Style/CommentCard.scss
+++ b/src/components/Comment/Style/CommentCard.scss
@@ -1,72 +1,109 @@
 .comment-card {
-  display: flex;
-  align-items: flex-start;
-  gap: 8px;
-  margin-bottom: 12px;
-  .avatar-container {
-    .avatar {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
+  & > .comment-container-first {
+    display: flex;
+    align-items: flex-start;
+    gap: 8px;
+    margin-bottom: 12px;
+    .avatar-container {
+      .avatar {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+      }
     }
-  }
-  .avatar-container:hover {
-    cursor: pointer;
-  }
-  .content-comment {
-    background: #f0f2f5;
-    border-radius: 18px;
-    max-width: 85%;
-    padding: 8px 12px;
-    position: relative;
-    width: fit-content;
-    .content {
-      word-wrap: break-word;
+    .avatar-container:hover {
+      cursor: pointer;
+    }
+    .content-comment {
+      background: #f0f2f5;
+      border-radius: 18px;
+      max-width: 85%;
+      padding: 8px 12px;
+      position: relative;
+      width: fit-content;
+      .content {
+        word-wrap: break-word;
+        color: #050505;
+      }
+      .edit-text {
+        color: #65676b;
+        font-weight: 500;
+      }
+      .edit-text:hover {
+        cursor: pointer;
+        text-decoration: underline;
+      }
+      .number-like-comment {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        background: #ffffff;
+        border-radius: 12px;
+        bottom: -9px;
+        right: 0;
+        svg {
+          width: 18px;
+          height: 18px;
+        }
+        span {
+          color: #65676b;
+          opacity: 0.5;
+        }
+      }
+    }
+    .option-comment-nav-down {
+      #comment-toggle::after {
+        display: none;
+      }
+      .option-comment {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .option-comment:hover {
+        background: #f0f2f5;
+        cursor: pointer;
+      }
+    }
+
+    .user-comment {
       color: #050505;
+      font-size: 16px;
+      font-weight: 600;
     }
-    .edit-text {
+
+    .footer-comment {
+      max-width: 70%;
+      display: flex;
+      gap: 12px;
+      margin-left: 12px;
       color: #65676b;
       font-weight: 500;
-    }
-    .edit-text:hover {
-      cursor: pointer;
-      text-decoration: underline;
-    }
-    .number-like-comment {
-      position: absolute;
-      display: flex;
       align-items: center;
-      gap: 8px;
-      background: #ffffff;
-      border-radius: 12px;
-      bottom: -9px;
-      right: 0;
-      svg {
-        width: 18px;
-        height: 18px;
-      }
-      span {
-        color: #65676b;
-        opacity: 0.5;
+      .tool-footer:hover {
+        cursor: pointer;
+        text-decoration: underline;
       }
     }
-  }
-  .user-comment {
-    color: #050505;
-    font-size: 16px;
-    font-weight: 600;
+    .container {
+      padding: 0;
+      .option-comment-nav-down {
+        display: none;
+      }
+      &:hover {
+        .option-comment-nav-down {
+          display: block;
+        }
+      }
+    }
   }
 
-  .footer-comment {
-    max-width: 70%;
-    display: flex;
-    gap: 12px;
-    margin-left: 12px;
-    color: #65676b;
-    font-weight: 500;
-    .tool-footer:hover {
-      cursor: pointer;
-      text-decoration: underline;
-    }
+  & > .comment-feedback {
+    margin-left: 20px;
+    margin-bottom: 12px;
   }
 }
