--- a/src/components/Comment/Style/InputComment.scss
+++ b/src/components/Comment/Style/InputComment.scss
@@ -1,5 +1,6 @@
 .container-comment {
-  display: flex;
+  display: grid;
+  grid-template-columns: 40px auto;
   align-items: center;
   padding: 0 16px 12px;
   gap: 8px;
@@ -8,8 +9,28 @@
     height: 40px;
     border-radius: 50%;
   }
+  .input-container.feedback {
+    position: relative;
+    .user-name-feedback {
+      position: absolute;
+      top: 0px;
+      left: 16px;
+      height: 40px;
+      align-items: center;
+      display: flex;
+      color: #0d6efd;
+      font-weight: 500;
+    }
+    .input-comment {
+      min-height: 40px;
+      word-break: break-all;
+      border-radius: 18px;
+      background: #f0f2f5;
+    }
+  }
   .comment-input {
-    height: 40px;
+    min-height: 40px;
+    word-break: break-all;
     border-radius: 18px;
     background: #f0f2f5;
     resize: none;
@@ -19,8 +40,18 @@
     outline: none;
     padding: 8px 16px;
   }
+  [placeholder]:empty::before {
+    content: attr(placeholder);
+    color: #b6b6b6;
+  }
+  [placeholder]:empty:focus::before {
+    content: "";
+  }
   .comment-input::-webkit-input-placeholder {
     color: #65676b;
     font-weight: 500;
   }
+}
+.container-comment:has(.input-container.feedback) {
+  padding-left: 20px;
 }
