--- a/src/components/PostCard/Style/PostBody.scss
+++ b/src/components/PostCard/Style/PostBody.scss
@@ -6,12 +6,17 @@
   }
   .post-images {
     .carousel {
+      height: 100%;
+      .carousel-inner {
+        height: 100%;
+      }
     }
     .carousel-item {
+      height: 100%;
       img {
+        height: 100%;
         width: 100%;
-        height: fit-content;
-        object-fit: contain;
+        object-fit: cover;
       }
     }
   }
