--- a/src/assets/sass/components/index.scss
+++ b/src/assets/sass/components/index.scss
@@ -2,3 +2,7 @@
 @import "header/header.scss";
 @import "home/home.scss";
 @import "info/info.scss";
+@import "message/MessageLeft.scss";
+@import "message/MessageRight.scss";
+@import "usercard/UserCardListMessage.scss";
+@import "usercard/UserCardMessage.scss";
