update follower, edit profile

--- a/src/assets/sass/components/index.scss
+++ b/src/assets/sass/components/index.scss
@@ -1,4 +1,6 @@
 @import "./general.scss";
+@import "./editprofile.scss";
 @import "header/header.scss";
 @import "home/home.scss";
 @import "info/info.scss";
+
