--- a/src/assets/sass/components/header/header.scss
+++ b/src/assets/sass/components/header/header.scss
@@ -46,18 +46,46 @@
 
   .menu {
     flex: 3;
+    position: relative;
     display: flex;
     float: right;
-    .profile {
-      vertical-align: middle;
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      margin: 30px;
+    .notification {
+      z-index: 999;
+      position: absolute;
+      top: 85%;
+      width: 300px;
+      height: 500px;
+      display: block;
+      right: 10px;
+      background-color: #f1f1f1;
+      border-radius: 3%;
+      overflow-y: scroll;
+      ::-webkit-scrollbar {
+        width: 8px;
+        background-color: #cccccc;
+      }
     }
-    .profile:hover {
-      cursor: pointer;
-      border: solid 2px #f1f1f1;
+    .container-menu {
+      position: relative;
+      .profile {
+        vertical-align: middle;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        margin: 30px;
+      }
+      .menu-profile {
+        position: absolute;
+        top: 85%;
+        right: 10px;
+        background-color: #f1f1f1;
+        border-radius: 5%;
+        z-index: 999;
+      }
+      .profile:hover {
+        cursor: pointer;
+        border: solid 2px #f1f1f1;
+      }
     }
     .btn-notification, .btn-message {
       display: flex;
@@ -92,35 +120,35 @@
     .btn-discover:hover {
       background-color: #c7c8c9;
     }
-    .menu-profile {
-      position: fixed;
-      top: 70px;
-      display: block;
-      right: 0px;
-      margin-right: 10px;
-      background-color: #f1f1f1;
-      border-radius: 5%;
-    }
-    .notification {
-      position: fixed;
-      top: 70px;
-      width: 300px;
-      height: 500px;
-      display: block;
-      right: 0px;
-      margin-right: 10px;
-      background-color: #f1f1f1;
-      border-radius: 3%;
-      overflow-y: scroll;
-      h1 {
-        font-family: Helvetica, Arial, sans-serif;
-        padding: 10px;
-      }
-      ::-webkit-scrollbar {
-        width: 8px;
-        background-color: #cccccc;
-      }
-    }
+    // .menu-profile {
+    //   position: fixed;
+    //   top: 70px;
+    //   display: block;
+    //   right: 0px;
+    //   margin-right: 10px;
+    //   background-color: #f1f1f1;
+    //   border-radius: 5%;
+    // }
+    // .notification {
+    //   position: fixed;
+    //   top: 70px;
+    //   width: 300px;
+    //   height: 500px;
+    //   display: block;
+    //   right: 0px;
+    //   margin-right: 10px;
+    //   background-color: #f1f1f1;
+    //   border-radius: 3%;
+    //   overflow-y: scroll;
+    //   h1 {
+    //     font-family: Helvetica, Arial, sans-serif;
+    //     padding: 10px;
+    //   }
+    //   ::-webkit-scrollbar {
+    //     width: 8px;
+    //     background-color: #cccccc;
+    //   }
+    // }
   }
   .back-form {
     position: fixed;
