--- a/src/assets/sass/components/info/info.scss
+++ b/src/assets/sass/components/info/info.scss
@@ -72,6 +72,7 @@
       bottom: 0;
       justify-content: center;
       align-items: center;
+      z-index: 3;
       .modal-form {
         position: absolute;
         width: 100%;
