--- a/src/assets/sass/components/index.scss
+++ b/src/assets/sass/components/index.scss
@@ -7,3 +7,4 @@
 @import "message/MessageRight.scss";
 @import "usercard/UserCardListMessage.scss";
 @import "usercard/UserCardMessage.scss";
+@import "usercard/UserCard.scss";
