--- a/src/assets/sass/components/info/info.scss
+++ b/src/assets/sass/components/info/info.scss
@@ -1,92 +1,89 @@
 .info {
-  // overflow-y: scroll;
   .myprofile-container {
-    display: block;
+    display: flex;
     margin: auto;
     font-family: Arial, sans-serif;
     margin-top: 20px;
     width: 80%;
-    .header-profile {
+    .avatar-container {
+      flex: 2;
+      display: block;
+      text-align: center;
+      margin: auto;
+      .avatar {
+        border-radius: 50%;
+      }
+    }
+    .main {
+      flex: 4;
       display: flex;
+      flex-direction: column;
+      margin: auto auto auto 1.8rem;
+      .info_user_row_1 {
+        display: flex;
+      }
+      .info_user_row_2 {
+        display: flex;
+        column-gap: 1.5rem;
+        .followers:hover,
+        .following:hover {
+          cursor: pointer;
+        }
+      }
+      .info_user_row_3 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        .fullname {
+          font-weight: bold;
+        }
+        .website {
+          a {
+            text-decoration: none;
+            font-weight: bold;
+          }
+        }
+      }
+    }
+  }
+}
+
+.back-form {
+  position: fixed;
+  display: flex;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+  .modal-form {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.25);
+  }
+  .container-form {
+    position: relative;
+    display: block;
+    width: 350px;
+    height: 330px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 15px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .info {
+    .myprofile-container {
       .avatar-container {
         flex: 1;
-        display: block;
-        text-align: center;
-        // vertical-align: middle;
-        // align-items: center;
-        // justify-content: center;
-        margin: auto;
         .avatar {
-          border-radius: 50%;
+          width: 50%;
+          height: 50%;
         }
-        .editprofile {
-          margin: auto;
-          margin-top: 10px;
-        }
-      }
-
-      .main {
-        flex: 4;
-        display: block;
-        margin: auto;
-        margin-left: 10px;
-        .name {
-          display: flex;
-          button {
-            margin-left: 10px;
-            background-color: #cccccc;
-            color: black;
-          }
-        }
-        .fullname {
-          font-size: 20px;
-          margin-top: 15px;
-        }
-        .follow {
-          display: flex;
-          * {
-            margin-right: 10px;
-          }
-          .followers:hover {
-            cursor: pointer;
-          }
-          .following:hover {
-            cursor: pointer;
-          }
-        }
-      }
-    }
-    .info-user {
-      margin-left: 20px;
-      margin-top: 10px;
-      .saved:hover {
-        cursor: pointer;
-      }
-    }
-    .back-form {
-      position: fixed;
-      display: flex;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      justify-content: center;
-      align-items: center;
-      z-index: 3;
-      .modal-form {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.25);
-      }
-      .container-form {
-        position: relative;
-        display: block;
-        width: 350px;
-        height: 330px;
-        background-color: white;
-        padding: 20px;
-        border-radius: 15px;
       }
     }
   }
