--- a/src/components/Avatar/style/Avatar.scss
+++ b/src/components/Avatar/style/Avatar.scss
@@ -1,11 +1,23 @@
+.supper-avatar {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
 .big-avatar {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.medium-avatar {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
 }
 
 .small-avatar {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
 }
