--- a/src/assets/sass/components/postcard/postFooter.scss
+++ b/src/assets/sass/components/postcard/postFooter.scss
@@ -91,11 +91,11 @@
     .save-post {
       .icon-save {
         path {
-          fill: #ffc107;
+          fill: #2078f4;
         }
       }
       .icon-save ~ .save {
-        color: #ffc107;
+        color: #2078f4;
       }
     }
   }
