--- a/src/assets/sass/components/header/header.scss
+++ b/src/assets/sass/components/header/header.scss
@@ -9,7 +9,8 @@
   border-bottom: solid 1.5px rgb(219, 219, 219);
   background: #ffffff;
   z-index: 2;
-
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
   .logo {
     left: 50px;
     display: flex;
@@ -22,7 +23,7 @@
     flex: 5;
     display: block;
     width: 50%;
-    margin: 50px auto;
+    margin: 50px 0 50px 0.3rem;
     .form-control {
       background: #fafafa;
       border: 1px solid #ddd;
@@ -45,18 +46,22 @@
   }
 
   .menu {
-    flex: 3;
+    flex: 1;
     position: relative;
     display: flex;
     float: right;
     .container-menu {
       position: relative;
+      display: flex;
+      width: 45px;
+      height: 45px;
+      align-items: center;
+      margin: 0.3rem;
       .profile {
-        vertical-align: middle;
-        width: 50px;
-        height: 50px;
+        width: 100%;
+        height: 100%;
         border-radius: 50%;
-        margin: 30px;
+        display: flex;
       }
       .menu-profile {
         position: absolute;
@@ -77,8 +82,7 @@
     .btn-discover {
       display: flex;
       align-items: center;
-      margin: auto;
-      margin-right: 20px;
+      margin: 0.3rem;
       width: 45px;
       height: 45px;
       border-radius: 50%;
@@ -124,6 +128,17 @@
           width: 30px;
           margin: 10px;
         }
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .header {
+    .search-form { 
+      .form-control {
+        width: 100%;
       }
     }
   }
