--- a/src/assets/sass/components/index.scss
+++ b/src/assets/sass/components/index.scss
@@ -1,10 +1,33 @@
 @import "./general.scss";
-@import "./editprofile.scss";
+
+@import "avatar/avatar.scss";
+
+@import "comment/index.scss";
+@import "comment/inputComment.scss";
+
 @import "header/header.scss";
+
 @import "home/home.scss";
+
 @import "info/info.scss";
+@import "info/editProfile.scss";
+
+@import "loading/loading.scss";
+
 @import "message/MessageLeft.scss";
 @import "message/MessageRight.scss";
+
+@import "notification/notification.scss";
+
+@import "postcard/index.scss";
+
+@import "postgallery/postGallery.scss";
+
+@import "status/createPostModal.scss";
+@import "status/status.scss";
+
 @import "usercard/UserCardListMessage.scss";
 @import "usercard/UserCardMessage.scss";
 @import "usercard/UserCard.scss";
+
+@import "usersuggest/index.scss";
