--- a/src/assets/sass/components/postcard/index.scss
+++ b/src/assets/sass/components/postcard/index.scss
@@ -1,6 +1,6 @@
-@import "./PostHeader.scss";
-@import "./PostBody.scss";
-@import "./PostFooter.scss";
+@import "./postHeader.scss";
+@import "./postBody.scss";
+@import "./postFooter.scss";
 .posts-card {
   width: 80%;
   margin: auto;
@@ -9,5 +9,12 @@
     border-radius: 8px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     margin-top: 16px;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .posts-card {
+    width: 95%;
   }
 }
