--- a/src/assets/sass/components/status/status.scss
+++ b/src/assets/sass/components/status/status.scss
@@ -2,7 +2,7 @@
   width: 80%;
   background-color: #fff;
   border-radius: max(0px, min(8px, ((100vw - 4px) - 100%) * 9999)) / 8px;
-  padding: 12px 16px 10px;
+  padding: 12px 16px 10px 12px;
   margin: auto;
   margin-top: 1.5em;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -20,7 +20,7 @@
       color: #65676b;
       margin: 10px 0;
       border-radius: 20px;
-      padding: 10px 20px;
+      padding: 8px 20px 0 20px;
       background-color: #f0f2f5;
       font-size: 18px;
       &:hover {
@@ -61,5 +61,12 @@
         }
       }
     }
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .status_modal {
+    width: 95%;
   }
 }
