--- a/src/assets/sass/components/header/header.scss
+++ b/src/assets/sass/components/header/header.scss
@@ -24,13 +24,22 @@
     display: block;
     width: 50%;
     margin: 50px 0 50px 0.3rem;
-    .form-control {
-      background: #fafafa;
-      border: 1px solid #ddd;
+    .search_input {
       width: 60%;
-      outline: none;
-      text-indent: 5px;
-      border-radius: 3px;
+      display: flex;
+      .form-control {
+        background: #fafafa;
+        border: 1px solid #ddd;
+        width: 100%;
+        outline: none;
+        text-indent: 5px;
+        border-radius: 3px;
+      }
+      .search_loader {
+        position: absolute;
+        margin-top: 0.5rem;
+        right: 41%;
+      }
     }
     .users_search_result {
       position: absolute;
@@ -65,7 +74,7 @@
       }
       .menu-profile {
         position: absolute;
-        top: 85%;
+        top: 95%;
         right: 10px;
         background-color: white;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -82,6 +91,7 @@
     .btn-discover {
       display: flex;
       align-items: center;
+      position: relative;
       margin: 0.3rem;
       width: 45px;
       height: 45px;
@@ -133,12 +143,14 @@
   }
 }
 
-
 @media screen and (max-width: 768px) {
   .header {
-    .search-form { 
-      .form-control {
+    .search-form {
+      .search_input {
         width: 100%;
+        .search_loader {
+          right: 10%;
+        }
       }
     }
   }
