--- a/src/assets/sass/components/notification/notification.scss
+++ b/src/assets/sass/components/notification/notification.scss
@@ -1,25 +1,33 @@
 .notification {
   z-index: 999;
   position: absolute;
-  top: 75%;
+  top: 95%;
   width: 300px;
   height: 500px;
   display: block;
   padding: 10px;
-  right: 20px;
+  right: 30px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   background-color: white;
   border-radius: 3%;
   border: none;
   min-width: 300px;
   .btn_delete_all_notification {
+    position: relative;
+    width: fit-content;
+    margin: 0 0 10px 200px;
     color: red;
+    &:hover {
+      background-color: #ccd0d5;
+      border-radius: 10px;
+      padding: 0 2px;
+    }
   }
   .notification_msg {
     display: flex;
     row-gap: 10px;
     flex-direction: column;
-    max-height: calc(100vh - 200px);
+    max-height: 380px;
     overflow: auto;
   }
   .notification_msg div:hover {
