--- a/src/assets/sass/components/comment/commentCard.scss
+++ b/src/assets/sass/components/comment/commentCard.scss
@@ -74,6 +74,10 @@
       color: #050505;
       font-size: 16px;
       font-weight: 600;
+      &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+      }
     }
 
     .footer-comment {
@@ -81,9 +85,13 @@
       display: flex;
       gap: 12px;
       margin-left: 12px;
+      margin-top: 10px;
       color: #65676b;
       font-weight: 500;
       align-items: center;
+      small {
+        font-size: 0.7rem;
+      }
       .tool-footer:hover {
         cursor: pointer;
         text-decoration: underline;
