--- a/src/assets/sass/components/status/status.scss
+++ b/src/assets/sass/components/status/status.scss
@@ -22,7 +22,7 @@
       border-radius: 20px;
       padding: 8px 20px 0 20px;
       background-color: #f0f2f5;
-      font-size: 18px;
+      font-size: 1rem;
       &:hover {
         cursor: pointer;
         background-color: #e2e6ec;
