--- a/src/assets/sass/components/usersuggest/index.scss
+++ b/src/assets/sass/components/usersuggest/index.scss
@@ -1,17 +1,21 @@
-.user-suggest {
+.user_suggest {
   max-width: 260px;
-  margin: auto;
-  margin-top: 24px;
-  .header-suggest {
+  position: fixed;
+  margin: 50px auto auto auto;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  .header_suggest {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 12px;
     .title {
       color: #737373;
       font-size: 16px;
       font-weight: 600;
     }
-    .see-all {
+    .see_all {
       color: #000;
       font-size: 14px;
       &:hover {
@@ -20,14 +24,20 @@
       }
     }
   }
-  .content-suggest {
-    .suggest-user {
+  .content_suggest {
+    .content_suggest_main {
+      display: grid;
+      grid-template-columns: 1fr 8fr 1fr;
       padding: 0 0 8px;
-      font-family: "Segoe UI Historic, Segoe UI, Helvetica, Arial, sans-serif";
-      .user-name {
+      .suggest_user_name {
         color: #050505;
         font-size: 16px;
         font-weight: 600;
+        margin: 2px 0 0 10px;
+        &:hover {
+          text-decoration: underline;
+          cursor: pointer;
+        }
       }
     }
   }
