--- a/src/assets/sass/components/comment/commentCard.scss
+++ b/src/assets/sass/components/comment/commentCard.scss
@@ -108,6 +108,17 @@
         }
       }
     }
+    .comment-input-update {
+      min-height: 35px;
+      word-break: break-all;
+      border-radius: 18px;
+      background: #f0f2f5;
+      resize: none;
+      flex: 1;
+      border: none;
+      outline: none;
+      padding: 8px 16px;
+    }
   }
 
   & > .comment-feedback {
