add call feature

--- a/src/assets/sass/components/index.scss
+++ b/src/assets/sass/components/index.scss
@@ -14,6 +14,7 @@
 
 @import "loading/loading.scss";
 
+@import "message/Call.scss";
 @import "message/MessageLeft.scss";
 @import "message/MessageRight.scss";
 
