--- a/src/assets/sass/views/login/login.scss
+++ b/src/assets/sass/views/login/login.scss
@@ -1,6 +1,5 @@
 .card-login {
-    margin: 30px;
-    min-height: 85vh;
+    margin: 100px 30px;
     min-width: 33vw;
     max-width: 560px !important;
     display: flex;
