--- a/src/assets/sass/components/postcard/postFooter.scss
+++ b/src/assets/sass/components/postcard/postFooter.scss
@@ -3,8 +3,8 @@
   .number-details {
     display: flex;
     justify-content: space-between;
-    color: #65676b;
-    border-bottom: 1px solid #ced0d4;
+    color: var(--color-second);
+    border-bottom: 1px solid var(--color-hover-input);
     padding: 10px 0;
     .number-likes {
       display: flex;
@@ -36,8 +36,9 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 12px;
     padding: 8px 0;
-    border-bottom: 1px solid #ced0d4;
+    border-bottom: 1px solid var(--color-hover-input);
     font-weight: 600;
+    color: var(--color-second);
     .tool {
       display: flex;
       gap: 4px;
@@ -47,7 +48,7 @@
       height: 40px;
     }
     .tool:hover {
-      background: #f0f2f5;
+      background: var(--color-hover-input);
       cursor: pointer;
     }
     .like-post {
@@ -70,7 +71,7 @@
       .like-icon {
         background-image: url("https://static.xx.fbcdn.net/rsrc.php/v3/yZ/r/CU34OlhYYa_.png");
         background-position: 0px -212px;
-        -webkit-filter: invert(39%) sepia(57%) saturate(200%) saturate(200%)
+        filter: invert(39%) sepia(57%) saturate(200%) saturate(200%)
           saturate(200%) saturate(200%) saturate(200%) saturate(147.75%)
           hue-rotate(202deg) brightness(97%) contrast(96%);
       }
@@ -99,4 +100,8 @@
       }
     }
   }
+}
+body[data-theme="dark"] .post-footer .tools-post .icon-like .like-icon {
+  filter: invert(62%) sepia(98%) saturate(12%) hue-rotate(175deg)
+    brightness(90%) contrast(96%);
 }
