--- a/src/assets/sass/components/info/info.scss
+++ b/src/assets/sass/components/info/info.scss
@@ -29,6 +29,7 @@
       float: left;
       .profile-user-name {
         display: inline-block;
+        color: var(--color-primary);
       }
       .profile-edit-btn {
         border: 0.1rem solid #dbdbdb;
@@ -47,6 +48,7 @@
       width: auto;
       margin: 0;
       float: left;
+      color: var(--color-primary);
       ul {
         list-style: none;
         margin: 0;
@@ -84,6 +86,7 @@
     .profile-stat-count,
     .profile-edit-btn {
       font-weight: 600;
+      color: var(--color-primary);
     }
   }
   .myprofile-container::after {
@@ -146,6 +149,7 @@
       .profile-stats {
         margin: 0;
         grid-column: 1 / -1;
+        color: var(--color-primary);
         ul {
           display: flex;
           text-align: center;
