--- a/src/assets/sass/components/loading/loading.scss
+++ b/src/assets/sass/components/loading/loading.scss
@@ -2,11 +2,13 @@
   width: 80%;
   justify-content: center;
   margin: 20px auto;
-  background: #ffffff;
+  background: var(--background-color-second);
   border-radius: 8px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
-
+.screen-splash {
+  background: var(--background-color-second);
+}
 @media screen and (max-width: 768px) {
   .skeleton_loader {
     width: 95%;
