--- a/src/assets/sass/components/notification/notification.scss
+++ b/src/assets/sass/components/notification/notification.scss
@@ -8,19 +8,29 @@
   padding: 10px;
   right: 30px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  background-color: white;
+  background-color: var(--background-color-second);
   border-radius: 3%;
   border: none;
   min-width: 300px;
+  h3 {
+    color: var(--color-primary);
+  }
   .btn_delete_all_notification {
     position: relative;
-    width: fit-content;
-    margin: 0 0 10px 200px;
-    color: red;
-    &:hover {
-      background-color: #ccd0d5;
-      border-radius: 10px;
-      padding: 0 2px;
+    width: 100%;
+    padding: 0 12px;
+    color: #4599ff;
+    text-align: end;
+    display: flex;
+    justify-content: flex-end;
+    span {
+      padding: 12px 24px;
+      display: block;
+      width: fit-content;
+    }
+    span:hover {
+      background-color: var(--color-hover-input);
+      border-radius: 8px;
     }
   }
   .notification_msg {
@@ -29,9 +39,22 @@
     flex-direction: column;
     max-height: 380px;
     overflow: auto;
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #e8e8e8;
+      border-radius: 14px;
+    }
+
+    &::-webkit-scrollbar-track {
+      // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+      background-color: transparent;
+    }
   }
   .notification_msg div:hover {
-    background-color: #ccd0d5;
+    background-color: var(--color-hover-input);
     border-radius: 10px;
   }
 }
@@ -40,5 +63,8 @@
   margin: auto;
   display: flex;
   flex-direction: column;
-  color: black;
+  color: var(--color-second);
+  strong {
+    color: var(--color-primary);
+  }
 }
