--- a/src/assets/sass/components/postcard/index.scss
+++ b/src/assets/sass/components/postcard/index.scss
@@ -5,7 +5,7 @@
   width: 80%;
   margin: auto;
   .post {
-    background: #ffffff;
+    background: var(--background-color-second);
     border-radius: 8px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     margin-top: 16px;
