--- a/src/assets/sass/components/postcard/postHeader.scss
+++ b/src/assets/sass/components/postcard/postHeader.scss
@@ -16,7 +16,7 @@
       display: flex;
       flex-direction: column;
       .user-name {
-        color: #050505;
+        color: var(--color-primary);
         font-size: 16px;
         font-weight: 600;
         &:hover {
@@ -25,7 +25,7 @@
         }
       }
       .post-time {
-        color: #65676b;
+        color: var(--color-second);
         font-size: 14px;
         font-weight: 400;
       }
@@ -37,9 +37,24 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      svg {
+        path {
+          fill: var(--color-second);
+        }
+      }
+    }
+    .dropdown-menu {
+      color: var(--color-primary);
+      background-color: var(--background-color-second);
+      a {
+        color: var(--color-primary) !important;
+        &:hover {
+          background-color: var(--background-color-third);
+        }
+      }
     }
     .option-post:hover {
-      background: #f0f2f5;
+      background: var(--background-color-primary);
       cursor: pointer;
     }
     #post-toggle::after {
