--- a/src/assets/sass/components/status/createPostModal.scss
+++ b/src/assets/sass/components/status/createPostModal.scss
@@ -1,32 +1,59 @@
 .create-post-modal {
   padding: 16px;
+  .modal-dialog {
+    .modal-content {
+      background-color: var(--background-color-second);
+    }
+  }
   .modal-header {
     position: relative;
     justify-content: center;
+    border-bottom: 1px solid var(--color-hover-input);
     .title-create-post {
       font-size: 20px;
-      color: #050505;
+      color: var(--color-primary);
       font-weight: 700;
     }
-    .btn-close {
+    .btn-exit {
       position: absolute;
-      top: 24px;
+      top: 14px;
       right: 24px;
       width: 36px;
       height: 36px;
       border-radius: 50%;
-      background-color: #e4e6eb;
+      background-color: var(--background-color-third);
       padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      &:hover {
+        background-color: var(--color-hover-input);
+      }
+      svg {
+        width: 26px;
+        height: 26px;
+        path {
+          fill: var(--color-second);
+          stroke: var(--color-second);
+        }
+      }
     }
   }
   .modal-body {
     max-height: 75vh;
     overflow-x: auto;
     &::-webkit-scrollbar {
-      background-color: #f1f1f1;
+      background-color: transparent;
       box-shadow: none;
       width: 10px;
       border-radius: 8px;
+      visibility: hidden;
+    }
+    &:hover {
+      &::-webkit-scrollbar {
+        visibility: visible;
+        background-color: var(--background-color-second);
+      }
     }
 
     &::-webkit-scrollbar-thumb {
@@ -40,7 +67,7 @@
     }
 
     &::-webkit-scrollbar-track {
-      background-color: #f1f1f1;
+      background-color: var(--background-color-second);
       border-radius: 8px;
       box-shadow: none;
     }
@@ -56,7 +83,7 @@
       }
       .user-content {
         .user-name {
-          color: #050505;
+          color: var(--color-primary);
         }
       }
     }
@@ -66,6 +93,8 @@
         border: none;
         width: 100%;
         resize: none;
+        background-color: var(--background-color-second);
+        color: var(--color-primary);
       }
       .icon-emoji {
         text-align: end;
@@ -87,20 +116,33 @@
     }
     .upload-image-container {
       margin: 32px 8px 0;
-      border: 1px solid #ced0d4;
+      border: 1px solid var(--color-hover-input);
       border-radius: 8px;
       display: flex;
       flex-direction: column;
-      .btn-close {
+      .btn-exit {
         position: absolute;
-        top: 24px;
-        right: 24px;
+        top: 14px;
+        right: 14px;
         border-radius: 50%;
         width: 32px;
         height: 32px;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--background-color-third);
+        svg {
+          width: 26px;
+          height: 26px;
+          path {
+            fill: var(--color-second);
+            stroke: var(--color-second);
+          }
+        }
       }
-      .btn-close:hover {
-        background-color: #ffffff;
+      .btn-exit:hover {
+        background-color: var(--color-hover-input);
       }
       .show_images {
         .file_img {
@@ -113,7 +155,7 @@
 
       .btn-upload {
         position: relative;
-        background: #f7f8fa;
+        background: var(--background-color-third);
         border-radius: 8px;
         flex-grow: 1;
         margin: 8px;
@@ -132,25 +174,40 @@
             width: 40px;
             height: 40px;
             border-radius: 50%;
-            background: #e4e6eb;
+            background: var(--color-hover-input);
             display: flex;
             justify-content: center;
             align-items: center;
           }
         }
         span {
-          color: #050505;
+          color: var(--color-primary);
           font-weight: bold;
           margin-top: 8px;
         }
-        .btn-close {
+        .btn-exit {
           position: absolute;
           top: 12px;
           right: 12px;
           width: 20px;
           height: 20px;
           border-radius: 50%;
-          background-color: #ffffff;
+          background-color: var(--background-color-second);
+          padding: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          &:hover {
+            background-color: var(--color-hover-input);
+          }
+          svg {
+            width: 16px;
+            height: 16px;
+            path {
+              fill: var(--color-second);
+              stroke: var(--color-second);
+            }
+          }
         }
       }
 
@@ -163,20 +220,20 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        background: #f7f8fa;
+        background: var(--background-color-third);
         border-radius: 8px;
         margin: 8px;
         .icon-capture {
           width: 40px;
           height: 40px;
           border-radius: 50%;
-          background: #e4e6eb;
+          background: var(--color-hover-input);
           display: flex;
           justify-content: center;
           align-items: center;
         }
         span {
-          color: #050505;
+          color: var(--color-primary);
           font-weight: bold;
           margin-top: 8px;
         }
@@ -191,13 +248,13 @@
             width: 40px;
             height: 40px;
             border-radius: 50%;
-            background: #e4e6eb;
+            background: var(--color-hover-input);
             display: flex;
             justify-content: center;
             align-items: center;
           }
           span {
-            color: #050505;
+            color: var(--color-primary);
             font-weight: bold;
             margin-top: 8px;
           }
@@ -216,7 +273,7 @@
       border-radius: 8px;
       margin: 16px 8px;
       span {
-        color: #050505;
+        color: var(--color-primary);
         margin-left: 1em;
       }
       .tools {
@@ -235,7 +292,7 @@
           align-items: center;
         }
         .icon:hover {
-          background-color: #e4f0d5;
+          background-color: var(--color-hover-input);
           cursor: pointer;
         }
         .icon-image {
@@ -255,7 +312,7 @@
     border: none;
     .btn-submit {
       width: 100%;
-      color: #ffffff;
+      color: var(--background-color-second);
     }
   }
 }
