--- a/src/assets/sass/components/status/status.scss
+++ b/src/assets/sass/components/status/status.scss
@@ -1,6 +1,6 @@
 .status_modal {
   width: 80%;
-  background-color: #fff;
+  background-color: var(--background-color-second);
   border-radius: max(0px, min(8px, ((100vw - 4px) - 100%) * 9999)) / 8px;
   padding: 12px 16px 10px 12px;
   margin: auto;
@@ -17,23 +17,25 @@
     .status-input {
       height: 40px;
       width: 100%;
-      color: #65676b;
+      color: var(--color-second);
       margin: 10px 0;
       border-radius: 20px;
+      background-color: var(--background-color-third);
+      font-size: 18px;
       padding: 8px 20px 0 20px;
-      background-color: #f0f2f5;
       font-size: 1rem;
       &:hover {
         cursor: pointer;
-        background-color: #e2e6ec;
+        background-color: var(--color-hover-input);
       }
     }
   }
   .status_footer {
     margin-top: 12px;
-    border-top: solid 1px #e4e6eb;
+    border-top: solid 1px var(--color-hover-input);
     padding-top: 8px;
     justify-content: flex-end;
+    color: var(--color-second);
     .icon {
       display: flex;
       align-items: center;
@@ -42,7 +44,7 @@
         margin-right: 8px;
       }
       &:hover {
-        background-color: #e2e6ec;
+        background-color: var(--color-hover-input);
         cursor: pointer;
         border-radius: 8px;
       }
@@ -63,7 +65,6 @@
     }
   }
 }
-
 
 @media screen and (max-width: 768px) {
   .status_modal {
