--- a/src/assets/sass/views/profile/profile.scss
+++ b/src/assets/sass/views/profile/profile.scss
@@ -4,7 +4,8 @@
   margin-right: auto;
   margin-top: 20px;
   .profile_tab {
-    border-top: solid 1px #ccc;
+    border-top: solid 1px var(--color-hover-input);
+
     display: flex;
     margin: auto;
     align-items: center;
@@ -12,10 +13,11 @@
     a {
       text-decoration: none;
       padding: 20px;
-      color: black;
+      color: var(--color-primary);
     }
     .selected {
-      background-color: #ccc;
+      background-color: var(--background-color-third);
+      color: var(--color-primary);
     }
   }
 }
