--- a/src/assets/sass/components/info/editProfile.scss
+++ b/src/assets/sass/components/info/editProfile.scss
@@ -248,7 +248,7 @@
     border: none;
     .btn-submit {
       width: 100%;
-      color: #ffffff;
+      color: var(--color-primary);
     }
   }
 }
