--- a/src/assets/sass/components/loading/loading.scss
+++ b/src/assets/sass/components/loading/loading.scss
@@ -7,7 +7,13 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 .screen-splash {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
   background: var(--background-color-second);
+  z-index: 9999;
 }
 @media screen and (max-width: 768px) {
   .skeleton_loader {
