--- a/src/assets/sass/components/status/createPostModal.scss
+++ b/src/assets/sass/components/status/createPostModal.scss
@@ -312,7 +312,7 @@
     border: none;
     .btn-submit {
       width: 100%;
-      color: var(--background-color-second);
+      color: var(--color-primary);
     }
   }
 }
