--- a/src/assets/sass/components/editprofile.scss
+++ b/src/assets/sass/components/editprofile.scss
@@ -239,7 +239,7 @@
       border: none;
       .btn-submit {
         width: 100%;
-        color: var(--background-color-second);
+        color: var(--color-primary);
       }
     }
   }
