update profile page

--- a/src/assets/sass/views/profile/profile.scss
+++ b/src/assets/sass/views/profile/profile.scss
@@ -19,7 +19,7 @@
         color: var(--color-primary);
       }
       .selected {
-        background-color: var(--background-color-third);
+        background-color: #ccc;
         color: var(--color-primary);
       }
     }
