--- a/src/assets/sass/components/info/editProfile.scss
+++ b/src/assets/sass/components/info/editProfile.scss
@@ -51,6 +51,49 @@
       border-radius: 8px;
       box-shadow: none;
     }
+    .info_avatar {
+      width: 150px;
+      height: 150px;
+      overflow: hidden;
+      border-radius: 50%;
+      position: relative;
+      margin: 15px auto;
+      border: 1px solid #ddd;
+      cursor: pointer;
+      img {
+        width: 100%;
+        height: 100%;
+        display: block;
+        object-fit: cover;
+      }
+      span {
+        position: absolute;
+        bottom: -100%;
+        left: 0;
+        width: 100%;
+        height: 50%;
+        text-align: center;
+        color: blue;
+        transition: 0.3s ease-in-out;
+        background: #fff5;
+      }
+      #file_up {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+        opacity: 0;
+      }
+    }
+    
+    .info_avatar:hover span {
+      bottom: -15%;
+    }
+    ::-webkit-file-upload-button {
+      cursor: pointer;
+    }
     .model-info {
       background-color: var(--background-color-second);
       color: var(--color-primary);
